syntax = "proto3";

import "google/protobuf/struct.proto";
package Dozer;
service FilmService {
  rpc film(GetFilmRequest) returns (GetFilmResponse);
  rpc by_id(GetFilmByIdRequest) returns (GetFilmByIdResponse);
  rpc query(QueryFilmRequest) returns (QueryFilmResponse);
  rpc on_insert(OnInsertRequest) returns (stream OnInsertResponse);
  rpc on_update(OnUpdateRequest) returns (stream OnUpdateResponse);
  rpc on_delete(OnDeleteRequest) returns (stream OnDeleteResponse);
  rpc on_schema_change(OnSchemaChangeRequest) returns (stream OnSchemaChangeResponse);
}

message Film {
 optional int32 film_id = 1; 
 optional string title = 2; 
 optional string rental_rate = 3; 
 optional int32 release_year = 4; 
}

message SortOptions {
 enum SortDirection { 
   asc = 0; 
   desc = 1; 
 } 
 string field_name = 1; 
 SortDirection direction = 2; 
}

message Event {
 enum EventType { 
   schema_change = 0; 
   record_update = 1; 
   record_insert = 2; 
   record_delete = 3; 
 } 
 EventType type = 1; 
 google.protobuf.Value detail = 2; 
}

message GetFilmRequest {
}

message GetFilmResponse {
 repeated Film film = 1;
}

message GetFilmByIdRequest {
 int32 film_id = 1;
}

message GetFilmByIdResponse {
 optional Film film = 1;
}

message QueryFilmRequest {
 optional FilterExpression filter = 1; 
 repeated SortOptions order_by = 2; 
 optional uint32 limit = 3; 
 optional uint32 skip = 4; 
}

message FilterExpression {
  oneof expression {
    Int32Expression film_id = 1; 
    StringExpression title = 2; 
    StringExpression rental_rate = 3; 
    Int32Expression release_year = 4;
  }
  repeated FilterExpression and = 5;
}
message Int32Expression {
  oneof exp {
    int32 eq = 1;
    int32 lt = 2;
    int32 gt = 3;
    int32 gte = 4;
    int32 lte = 5;
  }
}

message StringExpression {
  oneof exp {
    string eq = 1;
    string lt = 2;
    string gt = 3;
    string gte = 4;
    string lte = 5;
  }
}

message QueryFilmResponse {
 repeated Film film = 1;
}

message OnInsertRequest {
}

message OnInsertResponse {
  google.protobuf.Value detail = 1;
}

message OnUpdateRequest {

}
message OnUpdateResponse {
  google.protobuf.Value detail = 1;
}

message OnDeleteRequest {

}
message OnDeleteResponse {
  google.protobuf.Value detail = 1;
}

message OnSchemaChangeRequest {

}

message OnSchemaChangeResponse {
  google.protobuf.Value detail = 1;
}